# titanic_mle

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/interim/: README.md
data/processed/: README.md
data/submissions/: README.md  catboost_baseline_depth6_lr005_submission.csv  catboost_best_submission.csv  catboost_d3_lr003_l280_b8_submission.csv  catboost_d3_lr005_l230_b5_submission.csv  eml_exact_top5_auc_submission.csv  eml_meta_ga_auc_iter3_submission.csv  eml_meta_ga_calibrated_logloss_iter4_submission.csv  eml_meta_ga_top12_auc_iter1_submission.csv  submission_summary.json
docs/: architecture.md  codex_jupyter_workflow.md  troubleshooting.md
docs/design/: mle_tree.md  titanic_unit_interval.md
docs/experiments/: 2026-04-20_catboost_baseline.md  2026-04-20_catboost_tuning.md  2026-04-20_discrete_counting.md  README.md  (+8 more)
notebooks/: titanic_starter.ipynb
rust/eml_tree_search/: Cargo.toml  README.md
rust/eml_tree_search/src/: discrete_domain.rs  lib.rs
scripts/: analyze_height2_sex_eml_trees.py  analyze_sex_embarked_eml_family.py  benchmark_catboost_on_unit_interval.py  benchmark_eml_catboost_cv.py  build_sex_eml_tree_catalog.py  count_sex_embarked_pair_trees.py  install_kernel.sh  prepare_kaggle_submissions.py  prepare_titanic_unit_interval.py  select_pairwise_terminal_library_cv.py  start_jupyter_lab.sh  study_random_eml_trees.py  tune_catboost_shared_cv.py
tests/: test_metrics.py  test_mle.py  test_preprocessing.py  test_random_eml_trees.py  test_repo_layout.py  test_sexpr_trees.py  test_tree_catalog.py  test_two_input_discrete_trees.py
titanic_mle/: __init__.py  catboost_profiles.py  metrics.py  mle.py  paths.py  preprocessing.py  random_eml_trees.py  sexpr_trees.py  submissions.py  tree.py  tree_catalog.py  two_input_discrete_trees.py
(+4 files in other folders)
